ds4.h

/* Public engine boundary.
 *
 * The CLI and server should treat ds4_engine as the loaded model and
 * ds4_session as one mutable inference timeline.  A session owns the live KV
 * cache and logits; callers provide full token prefixes and let
 * ds4_session_sync() reuse, extend, or rebuild the graph state.  Keep this
 * header narrow so HTTP/CLI code does not depend on tensor internals. */

typedef enum {
    DS4_BACKEND_METAL,
    DS4_BACKEND_CPU,
} ds4_backend;
typedef enum {
    DS4_THINK_NONE,
    DS4_THINK_HIGH,
    DS4_THINK_MAX,
} ds4_think_mode;
typedef struct {
    int *v;
    int len;
    int cap;
} ds4_tokens;
typedef struct {
    int id;
    float logit;
    float logprob;
} ds4_token_score;
typedef struct ds4_engine ds4_engine;
typedef struct {
    const char *model_path;
    const char *mtp_path;
    ds4_backend backend;
    int n_threads;
    int mtp_draft_tokens;
    float mtp_margin;
    bool warm_weights;
    bool quality;
} ds4_engine_options;
typedef struct {
    const void *map;
    uint64_t size;
} ds4_gguf_map;
typedef struct {
    uint64_t total_bytes;
    uint64_t raw_bytes;
    uint64_t compressed_bytes;
    uint64_t scratch_bytes;
    uint32_t prefill_cap;
    uint32_t raw_cap;
    uint32_t comp_cap;
} ds4_context_memory;
int ds4_engine_open(ds4_engine **out, const ds4_engine_options *opt);
int ds4_engine_open_mapped(ds4_engine **out, const ds4_engine_options *opt,
                           const ds4_gguf_map *model_map,
                           const ds4_gguf_map *mtp_map);
void ds4_engine_close(ds4_engine *e);
void ds4_engine_dump_tokens(ds4_engine *e, const ds4_tokens *tokens);
void ds4_tokens_push(ds4_tokens *tv, int token);
void ds4_tokens_free(ds4_tokens *tv);
int ds4_token_eos(ds4_engine *e);
int ds4_engine_mtp_draft_tokens(ds4_engine *e);